Further attempt to fix menu icon on mobile

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,7 @@ select {
     }
 
     header {
+        font-size: 0.85em;
         position: sticky;
         top: 0;
         overflow-y: auto;
